tests/ui/resolve/issue-82156.stderr
error[E0433]: too many leading `super` keywords within `crate`
  --> $DIR/issue-82156.rs:2:5
   |
LL |     super();
   |     ^^^^^ this `super` would go above the crate root

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
